--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "zendframework/zend-expressive-fastroute": "^1.0",
         "zendframework/zend-servicemanager": "^2.7.3 || ^3.0",
         "ocramius/proxy-manager": "^1.0 || ^2.0",
-        "zendframework/zend-expressive-platesrenderer": "^1.0"
+        "zendframework/zend-expressive-platesrenderer": "^1.0",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
