--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "zendframework/zend-servicemanager": "^2.7.3 || ^3.0",
         "ocramius/proxy-manager": "^1.0 || ^2.0",
         "zendframework/zend-expressive-platesrenderer": "^1.0",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "zendframework/zend-console": "^2.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
